# movie_api

./: Cargo.toml  setup.sql
src/: main.rs
src/controllers/: mod.rs  movie.rs
src/models/postgres/: movie.rs
src/routes/: movie.rs
src/schemas/: movie.rs
