[package]
name = "movie_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "tracing"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "uuid", "sqlite", "bigdecimal"] }
tokio = { version = "1.33.0", features = ["fs", "net", "macros", "rt-multi-thread"] }
tokio-test = "0.4.3"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["serde", "v4", "macro-diagnostics", "fast-rng"] }
